--- a/data-workflow/Workflow.ipynb
+++ b/data-workflow/Workflow.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
        "[1121 rows x 37 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "tags": [
      "challengify"
@@ -513,13 +513,388 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "tags": [
      "challengify"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MSSubClass</th>\n",
+       "      <th>LotFrontage</th>\n",
+       "      <th>LotArea</th>\n",
+       "      <th>OverallQual</th>\n",
+       "      <th>OverallCond</th>\n",
+       "      <th>YearBuilt</th>\n",
+       "      <th>YearRemodAdd</th>\n",
+       "      <th>MasVnrArea</th>\n",
+       "      <th>BsmtFinSF1</th>\n",
+       "      <th>BsmtFinSF2</th>\n",
+       "      <th>...</th>\n",
+       "      <th>GarageArea</th>\n",
+       "      <th>WoodDeckSF</th>\n",
+       "      <th>OpenPorchSF</th>\n",
+       "      <th>EnclosedPorch</th>\n",
+       "      <th>3SsnPorch</th>\n",
+       "      <th>ScreenPorch</th>\n",
+       "      <th>PoolArea</th>\n",
+       "      <th>MiscVal</th>\n",
+       "      <th>MoSold</th>\n",
+       "      <th>YrSold</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.878719</td>\n",
+       "      <td>0.186885</td>\n",
+       "      <td>-0.066635</td>\n",
+       "      <td>-0.159838</td>\n",
+       "      <td>1.357895</td>\n",
+       "      <td>-0.445886</td>\n",
+       "      <td>-1.314462</td>\n",
+       "      <td>0.108204</td>\n",
+       "      <td>0.326950</td>\n",
+       "      <td>-0.278554</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1.151130</td>\n",
+       "      <td>-0.738939</td>\n",
+       "      <td>-0.749484</td>\n",
+       "      <td>-0.372566</td>\n",
+       "      <td>-0.109954</td>\n",
+       "      <td>2.195993</td>\n",
+       "      <td>-0.061673</td>\n",
+       "      <td>-0.146085</td>\n",
+       "      <td>-0.110711</td>\n",
+       "      <td>0.168285</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.878719</td>\n",
+       "      <td>2.108009</td>\n",
+       "      <td>0.117185</td>\n",
+       "      <td>-0.871846</td>\n",
+       "      <td>0.415780</td>\n",
+       "      <td>0.093483</td>\n",
+       "      <td>-0.507574</td>\n",
+       "      <td>-0.584157</td>\n",
+       "      <td>0.659783</td>\n",
+       "      <td>-0.278554</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.352925</td>\n",
+       "      <td>-0.738939</td>\n",
+       "      <td>-0.749484</td>\n",
+       "      <td>-0.372566</td>\n",
+       "      <td>-0.109954</td>\n",
+       "      <td>-0.277928</td>\n",
+       "      <td>-0.061673</td>\n",
+       "      <td>-0.146085</td>\n",
+       "      <td>-1.965356</td>\n",
+       "      <td>-0.577113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.878719</td>\n",
+       "      <td>-0.453490</td>\n",
+       "      <td>-0.533191</td>\n",
+       "      <td>-0.871846</td>\n",
+       "      <td>2.300009</td>\n",
+       "      <td>-0.699707</td>\n",
+       "      <td>0.773954</td>\n",
+       "      <td>-0.584157</td>\n",
+       "      <td>-0.065154</td>\n",
+       "      <td>0.776043</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.117452</td>\n",
+       "      <td>0.830288</td>\n",
+       "      <td>-0.749484</td>\n",
+       "      <td>-0.372566</td>\n",
+       "      <td>-0.109954</td>\n",
+       "      <td>-0.277928</td>\n",
+       "      <td>-0.061673</td>\n",
+       "      <td>-0.146085</td>\n",
+       "      <td>0.260218</td>\n",
+       "      <td>-0.577113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.144006</td>\n",
+       "      <td>-0.965790</td>\n",
+       "      <td>0.625369</td>\n",
+       "      <td>0.552169</td>\n",
+       "      <td>-0.526334</td>\n",
+       "      <td>0.981856</td>\n",
+       "      <td>0.821418</td>\n",
+       "      <td>-0.584157</td>\n",
+       "      <td>2.107377</td>\n",
+       "      <td>-0.278554</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.854884</td>\n",
+       "      <td>0.619980</td>\n",
+       "      <td>-0.085080</td>\n",
+       "      <td>-0.372566</td>\n",
+       "      <td>-0.109954</td>\n",
+       "      <td>3.490043</td>\n",
+       "      <td>-0.061673</td>\n",
+       "      <td>-0.146085</td>\n",
+       "      <td>0.631147</td>\n",
+       "      <td>0.913683</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2.549942</td>\n",
+       "      <td>-1.990389</td>\n",
+       "      <td>-1.497216</td>\n",
+       "      <td>0.552169</td>\n",
+       "      <td>-0.526334</td>\n",
+       "      <td>1.013584</td>\n",
+       "      <td>0.868882</td>\n",
+       "      <td>-0.327727</td>\n",
+       "      <td>-0.972465</td>\n",
+       "      <td>-0.278554</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.668006</td>\n",
+       "      <td>-0.738939</td>\n",
+       "      <td>-0.131434</td>\n",
+       "      <td>-0.372566</td>\n",
+       "      <td>-0.109954</td>\n",
+       "      <td>-0.277928</td>\n",
+       "      <td>-0.061673</td>\n",
+       "      <td>-0.146085</td>\n",
+       "      <td>-0.481640</td>\n",
+       "      <td>-1.322512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>779</th>\n",
+       "      <td>-0.633815</td>\n",
+       "      <td>-0.880406</td>\n",
+       "      <td>-0.780483</td>\n",
+       "      <td>-1.583853</td>\n",
+       "      <td>-1.468449</td>\n",
+       "      <td>-1.651535</td>\n",
+       "      <td>-1.694174</td>\n",
+       "      <td>-0.584157</td>\n",
+       "      <td>-0.402546</td>\n",
+       "      <td>-0.278554</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1.046103</td>\n",
+       "      <td>-0.738939</td>\n",
+       "      <td>-0.749484</td>\n",
+       "      <td>2.246670</td>\n",
+       "      <td>-0.109954</td>\n",
+       "      <td>-0.277928</td>\n",
+       "      <td>-0.061673</td>\n",
+       "      <td>-0.146085</td>\n",
+       "      <td>0.260218</td>\n",
+       "      <td>-0.577113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>780</th>\n",
+       "      <td>0.100898</td>\n",
+       "      <td>0.485726</td>\n",
+       "      <td>-0.069108</td>\n",
+       "      <td>1.264176</td>\n",
+       "      <td>-0.526334</td>\n",
+       "      <td>0.791490</td>\n",
+       "      <td>0.584098</td>\n",
+       "      <td>1.585241</td>\n",
+       "      <td>1.475907</td>\n",
+       "      <td>-0.278554</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.905154</td>\n",
+       "      <td>-0.738939</td>\n",
+       "      <td>0.332103</td>\n",
+       "      <td>-0.372566</td>\n",
+       "      <td>-0.109954</td>\n",
+       "      <td>-0.277928</td>\n",
+       "      <td>-0.061673</td>\n",
+       "      <td>-0.146085</td>\n",
+       "      <td>-0.110711</td>\n",
+       "      <td>-1.322512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>781</th>\n",
+       "      <td>-0.878719</td>\n",
+       "      <td>0.400343</td>\n",
+       "      <td>-0.203469</td>\n",
+       "      <td>-0.159838</td>\n",
+       "      <td>0.415780</td>\n",
+       "      <td>-0.255521</td>\n",
+       "      <td>-1.029678</td>\n",
+       "      <td>1.595498</td>\n",
+       "      <td>0.288196</td>\n",
+       "      <td>-0.278554</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.242647</td>\n",
+       "      <td>-0.738939</td>\n",
+       "      <td>1.042860</td>\n",
+       "      <td>-0.372566</td>\n",
+       "      <td>-0.109954</td>\n",
+       "      <td>-0.277928</td>\n",
+       "      <td>-0.061673</td>\n",
+       "      <td>3.974984</td>\n",
+       "      <td>-1.223498</td>\n",
+       "      <td>-1.322512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>782</th>\n",
+       "      <td>-0.144006</td>\n",
+       "      <td>-0.453490</td>\n",
+       "      <td>-0.332885</td>\n",
+       "      <td>-1.583853</td>\n",
+       "      <td>0.415780</td>\n",
+       "      <td>-0.572797</td>\n",
+       "      <td>-0.649966</td>\n",
+       "      <td>-0.584157</td>\n",
+       "      <td>-0.972465</td>\n",
+       "      <td>-0.278554</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.214220</td>\n",
+       "      <td>-0.738939</td>\n",
+       "      <td>-0.749484</td>\n",
+       "      <td>-0.372566</td>\n",
+       "      <td>-0.109954</td>\n",
+       "      <td>2.690777</td>\n",
+       "      <td>-0.061673</td>\n",
+       "      <td>-0.146085</td>\n",
+       "      <td>-0.481640</td>\n",
+       "      <td>0.168285</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>783</th>\n",
+       "      <td>-0.878719</td>\n",
+       "      <td>-0.453490</td>\n",
+       "      <td>-0.569461</td>\n",
+       "      <td>-0.871846</td>\n",
+       "      <td>-0.526334</td>\n",
+       "      <td>1.045311</td>\n",
+       "      <td>0.963810</td>\n",
+       "      <td>-0.584157</td>\n",
+       "      <td>1.261617</td>\n",
+       "      <td>-0.278554</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.300412</td>\n",
+       "      <td>-0.738939</td>\n",
+       "      <td>0.007627</td>\n",
+       "      <td>-0.372566</td>\n",
+       "      <td>-0.109954</td>\n",
+       "      <td>-0.277928</td>\n",
+       "      <td>-0.061673</td>\n",
+       "      <td>-0.146085</td>\n",
+       "      <td>-0.110711</td>\n",
+       "      <td>-0.577113</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>784 rows × 36 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     MSSubClass  LotFrontage   LotArea  OverallQual  OverallCond  YearBuilt  \\\n",
+       "0     -0.878719     0.186885 -0.066635    -0.159838     1.357895  -0.445886   \n",
+       "1     -0.878719     2.108009  0.117185    -0.871846     0.415780   0.093483   \n",
+       "2     -0.878719    -0.453490 -0.533191    -0.871846     2.300009  -0.699707   \n",
+       "3     -0.144006    -0.965790  0.625369     0.552169    -0.526334   0.981856   \n",
+       "4      2.549942    -1.990389 -1.497216     0.552169    -0.526334   1.013584   \n",
+       "..          ...          ...       ...          ...          ...        ...   \n",
+       "779   -0.633815    -0.880406 -0.780483    -1.583853    -1.468449  -1.651535   \n",
+       "780    0.100898     0.485726 -0.069108     1.264176    -0.526334   0.791490   \n",
+       "781   -0.878719     0.400343 -0.203469    -0.159838     0.415780  -0.255521   \n",
+       "782   -0.144006    -0.453490 -0.332885    -1.583853     0.415780  -0.572797   \n",
+       "783   -0.878719    -0.453490 -0.569461    -0.871846    -0.526334   1.045311   \n",
+       "\n",
+       "     YearRemodAdd  MasVnrArea  BsmtFinSF1  BsmtFinSF2  ...  GarageArea  \\\n",
+       "0       -1.314462    0.108204    0.326950   -0.278554  ...   -1.151130   \n",
+       "1       -0.507574   -0.584157    0.659783   -0.278554  ...   -0.352925   \n",
+       "2        0.773954   -0.584157   -0.065154    0.776043  ...    1.117452   \n",
+       "3        0.821418   -0.584157    2.107377   -0.278554  ...    0.854884   \n",
+       "4        0.868882   -0.327727   -0.972465   -0.278554  ...   -0.668006   \n",
+       "..            ...         ...         ...         ...  ...         ...   \n",
+       "779     -1.694174   -0.584157   -0.402546   -0.278554  ...   -1.046103   \n",
+       "780      0.584098    1.585241    1.475907   -0.278554  ...    1.905154   \n",
+       "781     -1.029678    1.595498    0.288196   -0.278554  ...   -0.242647   \n",
+       "782     -0.649966   -0.584157   -0.972465   -0.278554  ...    0.214220   \n",
+       "783      0.963810   -0.584157    1.261617   -0.278554  ...   -0.300412   \n",
+       "\n",
+       "     WoodDeckSF  OpenPorchSF  EnclosedPorch  3SsnPorch  ScreenPorch  PoolArea  \\\n",
+       "0     -0.738939    -0.749484      -0.372566  -0.109954     2.195993 -0.061673   \n",
+       "1     -0.738939    -0.749484      -0.372566  -0.109954    -0.277928 -0.061673   \n",
+       "2      0.830288    -0.749484      -0.372566  -0.109954    -0.277928 -0.061673   \n",
+       "3      0.619980    -0.085080      -0.372566  -0.109954     3.490043 -0.061673   \n",
+       "4     -0.738939    -0.131434      -0.372566  -0.109954    -0.277928 -0.061673   \n",
+       "..          ...          ...            ...        ...          ...       ...   \n",
+       "779   -0.738939    -0.749484       2.246670  -0.109954    -0.277928 -0.061673   \n",
+       "780   -0.738939     0.332103      -0.372566  -0.109954    -0.277928 -0.061673   \n",
+       "781   -0.738939     1.042860      -0.372566  -0.109954    -0.277928 -0.061673   \n",
+       "782   -0.738939    -0.749484      -0.372566  -0.109954     2.690777 -0.061673   \n",
+       "783   -0.738939     0.007627      -0.372566  -0.109954    -0.277928 -0.061673   \n",
+       "\n",
+       "      MiscVal    MoSold    YrSold  \n",
+       "0   -0.146085 -0.110711  0.168285  \n",
+       "1   -0.146085 -1.965356 -0.577113  \n",
+       "2   -0.146085  0.260218 -0.577113  \n",
+       "3   -0.146085  0.631147  0.913683  \n",
+       "4   -0.146085 -0.481640 -1.322512  \n",
+       "..        ...       ...       ...  \n",
+       "779 -0.146085  0.260218 -0.577113  \n",
+       "780 -0.146085 -0.110711 -1.322512  \n",
+       "781  3.974984 -1.223498 -1.322512  \n",
+       "782 -0.146085 -0.481640  0.168285  \n",
+       "783 -0.146085 -0.110711 -0.577113  \n",
+       "\n",
+       "[784 rows x 36 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
     "\n",
@@ -527,7 +902,9 @@
     "\n",
     "scaler = StandardScaler().fit(X_train)\n",
     "\n",
-    "X_scaled = pd.DataFrame(scaler.transform(X_train), columns=X_train.columns)"
+    "X_scaled = pd.DataFrame(scaler.transform(X_train), columns=X_train.columns)\n",
+    "\n",
+    "X_scaled"
    ]
   },
   {
