Pipelines with hyper parameters

--- a/data-tuning-pipeline/03-Tuning-Pipeline.ipynb
+++ b/data-tuning-pipeline/03-Tuning-Pipeline.ipynb
@@ -390,7 +390,7 @@
        "Pipeline(steps=[('preprocessing',\n",
        "                 Pipeline(steps=[('imputer', SimpleImputer()),\n",
        "                                 ('scaling', MinMaxScaler())])),\n",
-       "                ('model_svm', SVC(C=6.087770140328533, kernel='poly'))])"
+       "                ('model_svm', SVC(C=6.001561076174607, kernel='poly'))])"
       ]
      },
      "execution_count": 6,
@@ -430,8 +430,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.72619048 0.75       0.76377953 0.73076923 0.7375    ]\n",
-      "0.7416478469037525\n"
+      "[0.72619048 0.75       0.76377953 0.73248408 0.7375    ]\n",
+      "0.7419908160365305\n"
      ]
     }
    ],
@@ -465,7 +465,7 @@
       "\n",
       "test_solution.py::TestSolution::test_cv_results \u001b[32mPASSED\u001b[0m\u001b[32m                   [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.85s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
+      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 1.04s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
       "\n",
       "\n",
       "💯 You can commit your code:\n",
@@ -515,7 +515,7 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n"
    ]
   },
   {
