--- a/05-ML/03-Performance-metrics/data-knn/KNN.ipynb
+++ b/05-ML/03-Performance-metrics/data-knn/KNN.ipynb
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "tags": [
      "challengify"
@@ -468,7 +468,13 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "scaler = MinMaxScaler()\n",
+    "\n",
+    "X_rescaled = scaler.fit_transform(X)\n",
+    "rescaled_score = cross_validate(model_knn, X_rescales, y)"
    ]
   },
   {
