--- a/05-ML/03-Performance-metrics/data-knn/KNN.ipynb
+++ b/05-ML/03-Performance-metrics/data-knn/KNN.ipynb
@@ -1020,15 +1020,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "tags": [
      "challengify"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Price Error (Negative MAE): -33309.902110783776\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "linear_model = LinearRegression()\n",
+    "linear_model.fit(X_rescaled, y)\n",
+    "\n",
+    "y_pred = linear_model.predict(X_rescaled)\n",
+    "\n",
+    "mae = mean_absolute_error(y, y_pred)\n",
+    "\n",
+    "price_error = -mae\n",
+    "print(f\"Price Error (Negative MAE): {price_error}\")"
    ]
   },
   {
